# sweep

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ISSUES_TO_CREATE.md  LICENSE  README.md  SMART_ALGORITHM_ANALYSIS.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
src/: cache.rs  error.rs  history.rs  main.rs  oplog.rs  output.rs  recommend_engine.rs  whitelist.rs
src/cleaners/: ai.rs  apps.rs  apps_cache.rs  browser.rs  comprehensive.rs  dev.rs  docker.rs  homebrew.rs  jetbrains.rs  mod.rs  optimize.rs  orphans.rs  system.rs  trash.rs  xcode.rs
src/commands/: ai.rs  clean.rs  dev.rs  docker.rs  dupes.rs  footer.rs  installer.rs  interactive.rs  mod.rs  optimize.rs  recommend.rs  scan.rs  smart.rs  status.rs  timeline.rs  ui.rs  uninstall.rs  watch.rs
src/scanner/: mod.rs
tests/: integration_test.rs  test_delete.rs
