[package]
name = "sweep"
version = "0.1.0"
edition = "2021"
description = "🧹 Fast system cleaner for macOS and Linux. 10x faster than shell-based tools."
license = "MIT"
repository = "https://github.com/raghavenderreddygrudhanti/sweep"
keywords = ["clean", "cache", "disk", "system", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
walkdir = "2"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
indicatif = "0.17"
bytesize = "1"
dirs = "5"
sysinfo = "0.30"
chrono = "0.4"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
