[package]
name = "sweep-cli"
version = "0.3.2"
edition = "2021"
description = "Fast system cleaner for macOS and Linux — clean caches, uninstall apps, analyze disk, optimize system. Single binary."
license = "MIT"
repository = "https://github.com/raghavenderreddygrudhanti/sweep"
keywords = ["clean", "cache", "disk", "system", "macos"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "sweep"
path = "src/main.rs"

[dependencies]
walkdir = "2"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
indicatif = "0.17"
bytesize = "1"
dirs = "5"
sysinfo = "0.30"
chrono = "0.4"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
